# doca-docs

./: DOCA_COMPRESS.html  DOCA_ERASURE_CODING.html  DOCA_ETH_RXQ.html  DOCA_ETH_TXQ_GPU_DATA_PATH.html  DOCA_TELEMETRY_PCC.html  DOCA_UROM.html  README.md  ____stdarg______gnuc__va__list_8h.html  ____stdarg______gnuc__va__list_8h.js  ____stdarg______gnuc__va__list_8h__dep__incl.md5  ____stdarg______va__copy_8h.html  ____stdarg__va__arg_8h.js  ____stdarg__va__arg_8h__dep__incl.map  ____stdarg__va__arg_8h__dep__incl.md5  ____stdarg__va__arg_8h_source.html  ____stdarg__va__copy_8h.html  ____stdarg__va__copy_8h.js  ____stdarg__va__list_8h.html  ____stdarg__va__list_8h__dep__incl.map  ____stdarg__va__list_8h__dep__incl.md5  ____stdarg__va__list_8h_source.html  ____stddef__max__align__t_8h_source.html  ____stddef__null_8h.html  ____stddef__null_8h__dep__incl.md5  ____stddef__null_8h_source.html  ____stddef__nullptr__t_8h.html  ____stddef__nullptr__t_8h_source.html  ____stddef__offsetof_8h.html  ____stddef__offsetof_8h__dep__incl.map  ____stddef__offsetof_8h__dep__incl.md5  ____stddef__offsetof_8h_source.html  ____stddef__ptrdiff__t_8h.html  ____stddef__ptrdiff__t_8h.js  ____stddef__ptrdiff__t_8h__dep__incl.map  ____stddef__ptrdiff__t_8h_source.html  ____stddef__rsize__t_8h.html  ____stddef__rsize__t_8h_source.html  ____stddef__size__t_8h.html  ____stddef__unreachable_8h_source.html  ____stddef__wchar__t_8h.html  (+5062 more)
applications/: VERSION  meson.build  meson_options.txt
applications/app_shield_agent/: app_shield_agent.c  app_shield_agent_core.c  app_shield_agent_core.h  meson.build
applications/app_shield_agent/dependencies/: meson.build
applications/common/: dpdk_utils.c  dpdk_utils.h  flow_parser.c  flow_pipes_manager.c  pack.c  packet_parser.c  packet_parser.h
applications/dma_copy/: dma_copy.c  dma_copy_core.c  dma_copy_params.json  meson.build
applications/dma_copy/dependencies/: meson.build
applications/dpa_all_to_all/: build_device_code.sh  build_dpa_all_to_all.sh  dpa_all_to_all_params.json  meson.build
applications/dpa_all_to_all/dependencies/: meson.build
applications/dpa_all_to_all/device/: dpa_all_to_all_dev.c
applications/dpa_all_to_all/host/: dpa_all_to_all.c  dpa_all_to_all_core.c  dpa_all_to_all_core.h
applications/east_west_overlay_encryption/: east_west_overlay_encryption.sh  east_west_overlay_encryption_params.json
applications/eth_l2_fwd/: eth_l2_fwd.c  eth_l2_fwd_core.c  eth_l2_fwd_core.h  eth_l2_fwd_params.json  meson.build
applications/eth_l2_fwd/dependencies/: meson.build
applications/file_compression/: file_compression.c  file_compression_core.c  file_compression_core.h  file_compression_params.json  meson.build
applications/file_compression/dependencies/: meson.build
applications/file_integrity/: file_integrity.c  file_integrity_core.c  file_integrity_core.h  file_integrity_params.json  meson.build
applications/file_integrity/dependencies/: meson.build
applications/gpu_packet_processing/: gpu_packet_processing.c  meson.build
applications/gpu_packet_processing/config_queues/: args.c  common.h  defines.h  device.c  flow.c  http_txbuf.c  icmp_queues.c  packets.h  tcp_queues.c  udp_queues.c
applications/gpu_packet_processing/dependencies/: meson.build
applications/gpu_packet_processing/dpdk_tcp/: tcp_cpu_rss_func.c  tcp_cpu_rss_func.h  tcp_session_table.c  tcp_session_table.h
applications/gpu_packet_processing/gpu_kernels/: filters.cuh  http_server.cu  receive_icmp.cu  receive_tcp.cu  receive_udp.cu
applications/ip_frag/: ip_frag.c  ip_frag_dp.c  ip_frag_dp.h  ip_frag_params.json  meson.build
applications/ip_frag/dependencies/: meson.build
applications/ipsec_security_gw/: config.c  config.h  flow_common.c  flow_common.h  flow_decrypt.c  flow_decrypt.h  flow_encrypt.c  flow_encrypt.h  ipsec_ctx.c  ipsec_ctx.h  ipsec_security_gw.c  ipsec_security_gw_config.json  ipsec_security_gw_params.json  meson.build  policy.c  policy.h
applications/ipsec_security_gw/dependencies/: meson.build
applications/nvme_emulation/: build_device_code.sh  meson.build  nvme_emulation.c  rpc_nvmf_doca.py
applications/nvme_emulation/common/: doca_transport_common.h
applications/nvme_emulation/dependencies/: meson.build
applications/nvme_emulation/device/: doca_transport_dev.c
applications/nvme_emulation/host/: doca_transport.c  nvme_pci_common.c  nvme_pci_common.h  nvme_pci_type_config.h  nvmf_doca_io.c  nvmf_doca_io.h  nvmf_rpc.c
applications/pcc/: build_device_code.sh  meson.build  pcc_params.json
applications/pcc/dependencies/: meson.build
applications/pcc/device/: pcc_common_dev.h
applications/pcc/host/: pcc.c  pcc_core.c  pcc_core.h
applications/psp_gateway/: meson.build  psp_gateway.cpp  psp_gateway_config.json  psp_gw_config.h  psp_gw_flows.cpp  psp_gw_flows.h  psp_gw_params.cpp  psp_gw_params.h  psp_gw_pkt_rss.cpp  psp_gw_pkt_rss.h  psp_gw_svc_impl.cpp  psp_gw_svc_impl.h  psp_gw_utils.cpp  psp_gw_utils.h
applications/psp_gateway/grpc/: meson.build  psp_gateway.proto
applications/secure_channel/: meson.build  secure_channel.c
applications/secure_channel/dependencies/: meson.build
applications/simple_fwd_vnf/: simple_fwd.c  simple_fwd_ft.c  simple_fwd_pkt.h  simple_fwd_vnf.c  simple_fwd_vnf_core.c
applications/storage/: comch_to_rdma_gga_offload.cpp  comch_to_rdma_zero_copy.cpp  gga_offload_sbc_generator.cpp  initiator_comch.cpp  meson.build  target_rdma.cpp
applications/storage/dependencies/: meson.build
applications/stream_receive_perf/: meson.build  stream_receive_perf.c  stream_receive_perf_core.c  stream_receive_perf_core.h  stream_receive_perf_params.json
applications/switch/: meson.build  switch.c  switch_core.c  switch_core.h
applications/upf_accel/: meson.build  upf_accel.c  upf_accel.h  upf_accel_flow_processing.c  upf_accel_flow_processing.h  upf_accel_json_parser.c  upf_accel_params.json  upf_accel_pipeline.c  upf_accel_pipeline.h
applications/urom_rdmo/: meson.build
applications/yara_inspection/: meson.build  yara_inspection.c  yara_inspection_core.c  yara_inspection_core.h
samples/: common.c  (+1 more)
(+6920 files in other folders)
